--- a/mws-restaurant-dejager/restaurant.html
+++ b/mws-restaurant-dejager/restaurant.html
@@ -23,13 +23,13 @@
         <nav>
             <!--***** Switch comments in code to run page on local servel OR on github *****-->
             <!-- <h1><a href="/">Restaurant Reviews</a></h1> -->
-            <h1><a href="/restaurant-reviews-app-stage-1/">Restaurant Reviews</a></h1>
+            <h1><a href="index.html">Restaurant Reviews</a></h1>
         </nav>
         <!-- Beginning breadcrumb -->
         <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
             <!--***** Switch comments in code to run page on local servel OR on github *****-->
             <!-- <li><a href="/">Home</a></li> -->
-            <li><a href="/restaurant-reviews-app-stage-1/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
 
         </ul>
         <!-- End breadcrumb -->
